# rust-assignment

./: .gitignore  Cargo.toml  README.md
.github/: renovate.json
src/: calculate.rs  main.rs
