[package]
name = "assign"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
actix-web = "4"

anyhow = "1.0"
env_logger = "0.9"
log = "0.4"

